refactor: tách base controller, chỉnh sửa giao diện login (vẫn còn 1 vài controller chưa refactor)